Complete dungeon greenfield migration M7